# libbno08x

./: .gitignore  BNO08xConfig.cmake.in  CMakeLists.txt  README.md  bno08x.pc.in  license.txt
debian/: changelog  control  copyright  libbno08x-dev.install  libbno08x.install  rules
examples/: i2c_test.cpp  rotation_vector.cpp
src/: BNO08x.cpp  BNO08x.h  config.h.cmake  sh2.c  sh2_hal.h  shtp.c
